--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
@@ -39,6 +40,7 @@ dependencies:
   google_fonts: ^6.1.0
   persistent_bottom_nav_bar: ^5.0.2
   readmore: ^2.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
