--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.4.1
   flutter:
     sdk: flutter
@@ -38,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   google_fonts: ^6.1.0
+  jwt_decoder: ^2.0.1
   persistent_bottom_nav_bar: ^5.0.2
   readmore: ^2.2.0
   shared_preferences: ^2.2.2
