--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^13.2.0
   google_fonts: ^6.1.0
   jwt_decoder: ^2.0.1
+  modal_progress_hud_nsn: ^0.5.1
   persistent_bottom_nav_bar: ^5.0.2
   readmore: ^2.2.0
   shared_preferences: ^2.2.2
