--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   awesome_dialog: ^3.2.0
+  cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
@@ -47,6 +48,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   readmore: ^2.2.0
   shared_preferences: ^2.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
