--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_image_slideshow: ^0.1.6
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
